--- a/arch/arm/configs/sun8iw7p1smp_linux_defconfig
+++ b/arch/arm/configs/sun8iw7p1smp_linux_defconfig
@@ -1708,8 +1708,8 @@ CONFIG_PINCTRL_SUNXI=y
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-# CONFIG_DEBUG_GPIO is not set
-# CONFIG_GPIO_SYSFS is not set
+CONFIG_DEBUG_GPIO=y
+CONFIG_GPIO_SYSFS=y
 
 #
 # Memory mapped GPIO drivers:
